Added play URL to page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
     </p>
     <hr>
     <p>
-    Created by Andrew Afflitto || LegoMaster616 || Monoleum. Based on <a href="git.io/2048">2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Play it <a href="http://undeadpenguin.com/negative-2048">here!</a> undeadpenguin.com/negative and undeadpenguin.com/- lead here too if you don't like typing...
+    </p>
+    <hr>
+    <p>
+    Created by Andrew Afflitto || LegoMaster616 || Monoleum. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
