Strong-ed some URLs

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <hr>
     <p>
-    Play it <a href="http://undeadpenguin.com/negative-2048">here!</a> undeadpenguin.com/negative and undeadpenguin.com/- lead here too if you don't like typing...
+    Play it <a href="http://undeadpenguin.com/negative-2048">here!</a> <strong>undeadpenguin.com/negative</strong> and <strong>undeadpenguin.com/-</strong> lead here too if you don't like typing...
     </p>
     <hr>
     <p>
