--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </p>
     <hr>
     <p>
-    Created by Andrew Afflitto || LegoMaster616 || Monoleum. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href = "http://undeadpenguin.com">Undead Penguin Studios</a>. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
 
