Added link to Github repo

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     </p>
     <hr>
     <p>
+    This code is open source. You can find the source code and detailed information <a href="http://github.com/LegoMaster616/-2048">here</a>.
+    </p>
+    <hr>
+    <p>
     Play it <a href="http://undeadpenguin.com/negative-2048">here!</a> <strong>undeadpenguin.com/negative</strong> and <strong>undeadpenguin.com/-</strong> lead here too if you don't like typing...
     </p>
     <hr>
