--- a/index.html
+++ b/index.html
@@ -75,18 +75,12 @@
     <hr>
     <p>
     <strong class="important">Note:</strong> This site is the official version of -2048.
-    </p>
-    <hr>
-    <p>
     This code is open source. You can find the source code and detailed information <a href="http://github.com/LegoMaster616/-2048">here</a>.
     </p>
     <hr>
     <p>
-    Play it <a href="http://undeadpenguin.com/negative-2048">here!</a> <strong>undeadpenguin.com/negative</strong> and <strong>undeadpenguin.com/-</strong> lead here too if you don't like typing...
-    </p>
-    <hr>
-    <p>
     Created by <a href = "http://undeadpenguin.com">Undead Penguin Studios</a>. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Please consider a tiny bitcoin donation! Wallet at 1CbtwY45bgbJ5WMi5RuAT7JpWPaFUw7bT1
     </p>
   </div>
 
