--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
     <hr>
     <p>
-    Created by <a href = "http://undeadpenguin.com">Undead Penguin Studios</a>. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by (mostly Andrew Afflitto) at <a href = "http://undeadpenguin.com">Undead Penguin Studios</a>. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     Please consider a tiny bitcoin donation! Wallet at <strong>1CbtwY45bgbJ5WMi5RuAT7JpWPaFUw7bT1</strong>
     </p>
   </div>
