--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <hr>
     <p>
     Created by (mostly Andrew Afflitto) at <a href = "http://undeadpenguin.com">Undead Penguin Studios</a>. Based on <a href="http://git.io/2048">Gabriele Cirulli's 2048</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
-    Please consider a tiny bitcoin donation! Wallet at <strong>1CbtwY45bgbJ5WMi5RuAT7JpWPaFUw7bT1</strong>
+    Please consider a tiny bitcoin donation! Wallet at <strong><a href="bitcoin:1CbtwY45bgbJ5WMi5RuAT7JpWPaFUw7bT1">1CbtwY45bgbJ5WMi5RuAT7JpWPaFUw7bT1</a></strong>
     </p>
   </div>
 
